test/functions/deitz/iterators/test_no_yield.chpl
proc myiter() {
  for i in 1..6 {
    yield;
  }
} 

for i in myiter() do
  writeln(i);
